--- a/src/components/RadioGroup/RadioGroup.module.scss
+++ b/src/components/RadioGroup/RadioGroup.module.scss
@@ -5,6 +5,11 @@
   display: flex;
   flex-direction: column;
   gap: var(--space-1);
+
+  &.disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
+  }
 }
 
 .radioLabel {
@@ -17,6 +22,11 @@
   transition:
     background-color 0.3s,
     color 0.3s;
+
+  &.disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
+  }
 }
 
 .hidden {
