Aspect Ratio added

--- a/src/components/RadioGroup/RadioGroup.module.scss
+++ b/src/components/RadioGroup/RadioGroup.module.scss
@@ -51,6 +51,7 @@
     width: 40%;
     height: 40%;
     border-radius: max(var(--radius-2), var(--radius-full));
+    box-shadow: var(--shadow-4);
     position: absolute;
     top: 50%;
     left: 50%;
