font detail fixed

--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -34,6 +34,7 @@
     font-size: var(--font-size-3);
     padding: var(--space-2);
     box-sizing: border-box;
+    color: var(--color-gray-12);
     display: flex;
     align-items: center;
     justify-content: space-between;
