--- a/src/components/Tab/Tab.module.scss
+++ b/src/components/Tab/Tab.module.scss
@@ -10,41 +10,74 @@
   display: flex;
   position: relative;
 }
+
 .content {
 }
+
 .trigger {
   display: flex;
+  z-index: 1;
   align-items: center;
   appearance: none;
   border: none;
   cursor: pointer;
   text-decoration: none;
-  box-sizing: content-box;
   color: var(--color-gray-a6);
   background-color: transparent;
-  border-bottom: 1px solid var(--color-accent-a6);
-  // box-shadow: 0 1px 0px 0px var(--color-accent-a6);
 
-  padding-bottom: var(--space-2);
-  padding-top: var(--space-2);
+  padding-bottom: var(--space-1);
+  padding-top: var(--space-1);
 
-  transition:
-    color 0.3s ease-in-out,
-    box-shadow 0.1s ease-in-out;
-
-  &:hover {
-    color: var(--color-gray-12);
-  }
-  &.active {
-    box-shadow: 0 3px 0 -1px var(--color-accent-9);
-    // border-bottom: 1px solid var(--color-accent-a6);
-    color: var(--color-gray-12);
+  .content {
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
   }
 
-  &.highContrast {
-    &.active {
-      box-shadow: 0 3px 0px -1px var(--color-accent-12);
+  &--outlined {
+    border-bottom: 1px solid var(--color-accent-a6);
+    transition:
+      color 0.3s ease-in-out,
+      box-shadow 0.1s ease-in-out;
+
+    &:hover {
       color: var(--color-gray-12);
+    }
+    &.active {
+      box-shadow: 0 3px 0 -1px var(--color-accent-9);
+      color: var(--color-gray-12);
+    }
+
+    &.highContrast {
+      &.active {
+        box-shadow: 0 3px 0px -1px var(--color-accent-12);
+        color: var(--color-gray-12);
+      }
+    }
+  }
+
+  &--solid {
+    transition: background-color 0.1s ease-in-out;
+    &:hover {
+      color: var(--color-accent-9);
+    }
+    &.active {
+      .content {
+        background-color: var(--color-accent-9);
+        color: var(--color-accent-9-contrast);
+      }
+    }
+
+    &.highContrast {
+      &.active {
+        .content {
+          background-color: var(--color-accent-12);
+          color: var(--color-accent-1);
+        }
+      }
     }
   }
 }
@@ -53,31 +86,42 @@
   &--trigger {
     @include mixins.breakpoints {
       &-xlarge {
-        height: var(--component-height-xlarge);
-        font-size: var(--font-size-4);
-        padding: var(--space-2) var(--space-4);
+        .content {
+          height: var(--component-height-xlarge);
+          border-radius: max(var(--radius-2), var(--radius-full));
+          font-size: var(--font-size-4);
+          padding: var(--space-2) var(--space-4);
+        }
       }
       &-large {
-        height: var(--component-height-large);
-        font-size: var(--font-size-4);
-        padding: var(--space-1) var(--space-4);
+        .content {
+          height: var(--component-height-large);
+          border-radius: max(var(--radius-2), var(--radius-full));
+          font-size: var(--font-size-4);
+          padding: var(--space-1) var(--space-4);
+        }
       }
       &-medium {
-        height: var(--component-height-medium);
-        font-size: var(--font-size-3);
-        padding: var(--space-1) var(--space-3);
+        .content {
+          height: var(--component-height-medium);
+          border-radius: max(var(--radius-3), var(--radius-full));
+          font-size: var(--font-size-3);
+          padding: var(--space-1) var(--space-3);
+        }
       }
       &-small {
-        height: var(--component-height-small);
-        font-size: var(--font-size-2);
-        padding: var(--space-1) var(--space-2);
+        .content {
+          height: var(--component-height-small);
+          border-radius: max(var(--radius-3), var(--radius-full));
+          font-size: var(--font-size-2);
+          padding: var(--space-1) var(--space-2);
+        }
       }
     }
   }
 }
 
 .menuBackdrop {
-  z-index: -1;
   position: absolute;
   top: var(--block-top);
   left: var(--block-left);
