--- a/src/components/Button/styles/BaseButton.module.scss
+++ b/src/components/Button/styles/BaseButton.module.scss
@@ -12,6 +12,7 @@
   -moz-user-drag: none;
   -o-user-drag: none;
   user-drag: none;
+  user-select: none;
   justify-content: center;
 
   &--start {
