--- a/src/components/IconButton/styles/BaseButton.module.scss
+++ b/src/components/IconButton/styles/BaseButton.module.scss
@@ -9,6 +9,7 @@
   gap: var(--space-2);
   text-decoration: none;
   justify-content: center;
+  user-select: none;
 
   color: var(--color-accent-9);
   display: flex;
