--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -16,6 +16,7 @@
   cursor: pointer;
   margin: 0 var(--space-0);
   color: var(--color-gray-12);
+  box-shadow: var(--shadow-theme);
 
   &--solid {
     &:hover {
