--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -5,6 +5,7 @@
   justify-content: start;
   align-items: center;
   user-select: none;
+  color: var(--color-gray-12);
   gap: var(--space-2);
 }
 
@@ -14,8 +15,8 @@
   justify-content: center;
   aspect-ratio: 1 / 1;
   cursor: pointer;
-  margin: 0 var(--space-0);
   color: var(--color-gray-12);
+  margin: 0 var(--space-0);
   box-shadow: var(--shadow-theme);
 
   &--solid {
