--- a/src/components/Tree/Tree.module.scss
+++ b/src/components/Tree/Tree.module.scss
@@ -34,7 +34,7 @@
 }
 
 .treeItem {
-  color: var(--gray-1);
+  color: var(--color-gray-1);
   // Ensure full width hover effect
   display: block;
   width: 100%;
