--- a/src/components/Tree/Tree.module.scss
+++ b/src/components/Tree/Tree.module.scss
@@ -26,6 +26,12 @@
   display: flex;
   width: 100%;
   align-items: center;
+
+  > .label {
+    display: flex;
+    align-items: center;
+    gap: var(--space-2);
+  }
 }
 
 .indent {
