--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -18,7 +18,6 @@
   .content {
     position: absolute;
     min-width: 120%;
-    width: 100%;
     z-index: 99;
     border-radius: max(var(--radius-4, --radius-full));
     background-color: var(--color-panel);
@@ -37,6 +36,7 @@
     color: var(--color-gray-12);
     display: flex;
     align-items: center;
+    gap: var(--space-2);
     justify-content: space-between;
     &:hover {
       background-color: var(--color-accent-a5);
