--- a/src/components/Grid/Grid.module.scss
+++ b/src/components/Grid/Grid.module.scss
@@ -28,7 +28,8 @@ $gutter-vertical: var(--vertical-gutter);
           }
         } @else {
           .col.#{$break}-#{$i} {
-            display: block;
+            display: flex;
+            flex-direction: column;
             flex: 0 0 calc((100% / 24 * #{$i}) - #{$gutter-horizontal});
             max-width: calc((100% / 24 * #{$i}) - #{$gutter-horizontal});
           }
@@ -45,7 +46,8 @@ $gutter-vertical: var(--vertical-gutter);
         }
       } @else {
         .col.#{$break}-#{$i} {
-          display: block;
+          display: flex;
+          flex-direction: column;
           flex: 0 0 calc((100% / 24 * #{$i}) - #{$gutter-horizontal});
           max-width: calc((100% / 24 * #{$i}) - #{$gutter-horizontal});
         }
