--- a/src/components/Tab/Tab.module.scss
+++ b/src/components/Tab/Tab.module.scss
@@ -7,6 +7,14 @@ $border-radius: max(var(--radius-3), var(--radius-full));
   display: flex;
   position: relative;
   align-items: center;
+
+  &.block {
+    width: 100%;
+
+    .trigger {
+      width: 100%;
+    }
+  }
   // border-bottom: 1px solid var(--color-accent-a6);
 }
 .list {
@@ -143,7 +151,6 @@ $border-radius: max(var(--radius-3), var(--radius-full));
     }
   }
 }
-
 .wd-tab {
   &--list {
     @include mixins.breakpoints {
