--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -23,6 +23,17 @@
     background-color: var(--color-panel);
     border: 1px solid var(--color-gray-a6);
     box-shadow: var(--shadow-theme);
+
+    transform: translateY(-8px);
+    opacity: 0;
+    transition:
+      opacity 0.2s ease,
+      transform 0.1s ease;
+
+    &.open {
+      transform: translateY(0);
+      opacity: 1;
+    }
   }
 
   .item {
