segmented tab seperated

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -38,7 +38,7 @@
   margin: var(--space-4);
   max-width: 450px;
   box-shadow: var(--shadow-theme);
-  border-radius: max(var(--radius-4), var(--radius-full));
+  border-radius: max(var(--radius-4), var(--radius-4));
   width: 100%;
   overflow: hidden;
   cursor: default;
