--- a/src/components/TextField/TextField.module.scss
+++ b/src/components/TextField/TextField.module.scss
@@ -23,7 +23,7 @@
   width: 100%;
   line-height: 28px;
   box-sizing: border-box;
-  border: 1px solid var(--color-gray-a6);
+  border: 1px solid var(--color-accent-a6);
   border-radius: max(var(--radius-3), var(--radius-full));
   outline: none;
   background-color: transparent;
@@ -34,32 +34,33 @@
 
   &--solid {
     border: 1px solid transparent;
-    background-color: var(--color-panel);
+    background-color: var(--color-surface-accent);
     &:focus,
     &:hover {
-      border: 1px solid var(--color-gray-a6);
-    }
-  }
-  &--outlined {
-    &:focus,
-    &:hover {
-      outline: none;
       border-color: var(--color-accent-9);
-
-      // background-color: var(--color-surface-accent);
     }
   }
+
   &--ghost {
+    border: 1px solid var(--color-accent-a6);
+    background-color: var(--color-surface-accent);
     &:focus,
     &:hover {
       outline: none;
       border-color: var(--color-accent-9);
       background-color: var(--color-surface-accent);
-      &::placeholder {
-        color: var(--color-accent-6);
-      }
     }
   }
+
+  &--outlined {
+    &:focus,
+    &:hover {
+      outline: none;
+      background-color: transparent;
+      border-color: var(--color-accent-9);
+    }
+  }
+
   &.hasPrependIcon {
     padding-left: 2.5rem !important;
     padding-right: 2.5rem !important;
