--fix segmented style

--- a/src/components/Segmented/Segmented.module.scss
+++ b/src/components/Segmented/Segmented.module.scss
@@ -32,7 +32,7 @@ $border-radius: max(var(--radius-3), var(--radius-full));
     border: none;
     cursor: pointer;
     text-decoration: none;
-    color: var(--color-gray-a8);
+    color: var(--color-accent-a8);
     background-color: transparent;
 
     padding-bottom: var(--space-1);
