--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -15,7 +15,6 @@
   // Menu Item styles
   &--item {
     display: flex;
-    gap: var(--space-2);
     align-items: center;
     appearance: none;
     border: none;
@@ -25,7 +24,14 @@
     box-sizing: border-box;
     color: var(--color-accent-12);
     font-weight: 400;
+    gap: var(--space-0);
     background-color: transparent;
+
+    /* Apply gap only if iconPrepend or iconAppend is a child */
+    &:has(> .iconPrepend),
+    &:has(> .iconAppend) {
+      gap: var(--space-2);
+    }
 
     > .iconPrepend,
     > .iconAppend {
@@ -80,19 +86,19 @@
     @include mixins.breakpoints {
       &-xlarge {
         font-size: var(--font-size-4);
-        padding: var(--space-0) var(--space-4);
+        margin: var(--space-0) var(--space-4);
       }
       &-large {
         font-size: var(--font-size-4);
-        padding: var(--space-0) var(--space-4);
+        margin: var(--space-0) var(--space-4);
       }
       &-medium {
         font-size: var(--font-size-3);
-        padding: var(--space-0) var(--space-3);
+        margin: var(--space-0) var(--space-3);
       }
       &-small {
         font-size: var(--font-size-2);
-        padding: var(--space-0) var(--space-2);
+        margin: var(--space-0) var(--space-2);
       }
     }
   }
