--- a/src/components/AutoComplete/AutoComplete.module.scss
+++ b/src/components/AutoComplete/AutoComplete.module.scss
@@ -1,19 +1,47 @@
 // AutoComplete.module.scss
 .autoCompleteContainer {
   position: relative;
+  width: inherit;
   // Add other styles as needed
 }
 
 .suggestionsList {
   list-style-type: none;
   position: absolute;
+  background-color: var(--color-panel);
+  color: var(--color-gray-12);
+  z-index: 0;
+  border-radius: var(--radius-4);
+  border: 1px solid var(--color-gray-a6);
+  box-shadow: var(--shadow-theme);
+
+  height: fit-content;
+
   width: 100%;
   z-index: 10;
-  // Add other styles like borders, padding, etc.
-}
 
-.suggestionsList li {
-  padding: 10px;
-  cursor: pointer;
-  // Add styles for hover, active, etc.
+  // Add other styles like borders, padding, etc.
+
+  .item {
+    margin: var(--space-1);
+    border-radius: var(--radius-4);
+    padding: var(--space-2);
+    cursor: pointer;
+    display: flex;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: var(--font-size-3);
+    box-sizing: border-box;
+    height: var(--component-height-medium);
+    justify-content: space-between;
+    align-items: center;
+    gap: var(--space-4);
+    transition: background-color 0.3s ease;
+    color: var(--color-gray-12);
+
+    &:hover {
+      background-color: var(--color-accent-a5);
+    }
+  }
 }
