--- a/src/components/AutoComplete/AutoComplete.module.scss
+++ b/src/components/AutoComplete/AutoComplete.module.scss
@@ -6,7 +6,11 @@
   // Add other styles as needed
 }
 
+.textField {
+  position: relative;
+}
 .suggestionsList {
+  top: calc(100% + var(--space-1));
   list-style-type: none;
   position: absolute;
   background-color: var(--color-panel);
@@ -19,7 +23,7 @@
   text-overflow: ellipsis;
   height: fit-content;
 
-  width: 100%;
+  max-width: 120%;
   z-index: 10;
 
   // Add other styles like borders, padding, etc.
