--- a/src/components/AutoComplete/AutoComplete.module.scss
+++ b/src/components/AutoComplete/AutoComplete.module.scss
@@ -23,7 +23,7 @@
   text-overflow: ellipsis;
   height: fit-content;
 
-  max-width: 120%;
+  width: 120%;
   z-index: 10;
 
   // Add other styles like borders, padding, etc.
