--- a/src/components/IconMenu/IconMenu.module.scss
+++ b/src/components/IconMenu/IconMenu.module.scss
@@ -26,6 +26,7 @@
     aspect-ratio: 1 / 1;
     background-color: transparent;
     justify-content: center;
+    color: var(--color-accent-12);
 
     > .label {
       white-space: nowrap;
